--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -1,19 +1,20 @@
 {
-    "name": "@pulumi/xyz",
+    "name": "@pulumi/stacktags",
     "version": "${VERSION}",
     "scripts": {
-        "build": "tsc"
+        "build": "tsc",
+        "install": "node scripts/install-pulumi-plugin.js resource stacktags ${VERSION}"
     },
     "dependencies": {
-        "@pulumi/aws": "^4.0.0"
+        "@pulumi/aws": "^5.0.0",
+        "@pulumi/pulumi": "^3.42.0"
     },
     "devDependencies": {
+        "@types/node": "^14",
         "typescript": "^3.7.0"
     },
-    "peerDependencies": {
-        "@pulumi/pulumi": "latest"
-    },
     "pulumi": {
-        "resource": true
+        "resource": true,
+        "name": "stacktags"
     }
 }
