--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -15,7 +15,7 @@
     "files": [
         "index.ts",
         "provider.ts",
-        "staticPage.ts",
+        "stackTags.ts",
         "utilities.ts"
     ]
 }
